--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -57,19 +57,36 @@
         </div>
         <div class="user-data">
             <div class="info-grid1">
-                <h2>E-mail: paola.lopes@mouts.info</h2>
-                <h2> Contato: (47) 99286-1109</h2>
-                <h2>Endereço: Avenida Brasil</h2>
+                <div class="container-info" id="email">
+                    <span>E-mail</span>
+                    <input type="text" class="label-name" value="paola.lopes@mouts.info">
+                </div>
+                <div class="container-info" id="contato">
+                    <span>Contato</span>
+                    <input type="text" class="label-name" value="(47)99286-1109">
+                </div>
+                <div class="container-info" id="Endereço">
+                    <span>Endereço</span>
+                    <input type="text" class="label-name" value="Avenida Brasil, Indaial">
+                </div>
             </div>
             <div class="info-grid2">
-                <h2>Cargo: SDR</h2>
-                <h2>Minha empresa: Mouts TI</h2>
-                <h2>Modelo de contratação: PJ</h2>
+                <div class="container-info" id="Cargo">
+                    <span>Cargo</span>
+                    <input type="text" class="label-name" value="SDR">
+                </div>
+                <div class="container-info" id="Modelo de contratação">
+                    <span>Modelo de contratação</span>
+                    <input type="text" class="label-name" value="PJ">
+                </div>
+                <div class="container-info" id="Minha empresa">
+                    <span>Cargo</span>
+                    <input type="text" class="label-name" value="Mouts TI">
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="../utils/index.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+        <script src="../utils/index.js"></script>
 </body>
 
 </html>
