Comecei a insercao de jquery

--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -80,9 +80,14 @@
                     <input type="text" class="label-name" value="PJ">
                 </div>
                 <div class="container-info" id="Minha empresa">
-                    <span>Cargo</span>
+                    <span>Empresa</span>
                     <input type="text" class="label-name" value="Mouts TI">
                 </div>
+            </div>
+            <div class="button-user">
+                <button type="button" id="button-save"onclick="salvarInformacoes()">Salvar</button>
+                <button type="button" id="button" onclick="cancelarAcao()">Cancelar</button>
+                <button type="button" id="button"onclick="excluirsuario()">Excluir</button>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
