Arrumei a responsividade do usuario e progredi o Js

--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -63,35 +63,34 @@
                 </div>
                 <div class="container-info" id="contato">
                     <span>Contato</span>
-                    <input type="text" class="label-name" value="(47)99286-1109">
+                    <input type="text" class="label-name" value="(47) 99286-1109">
                 </div>
-                <div class="container-info" id="Endereço">
+                <div class="container-info" id="endereço">
                     <span>Endereço</span>
-                    <input type="text" class="label-name" value="Avenida Brasil, Indaial">
+                    <input type="text" class="label-name" value="Indaial">
                 </div>
             </div>
             <div class="info-grid2">
-                <div class="container-info" id="Cargo">
+                <div class="container-info" id="cargo">
                     <span>Cargo</span>
                     <input type="text" class="label-name" value="SDR">
                 </div>
-                <div class="container-info" id="Modelo de contratação">
+                <div class="container-info" id="modelo de contratação">
                     <span>Modelo de contratação</span>
                     <input type="text" class="label-name" value="PJ">
                 </div>
-                <div class="container-info" id="Minha empresa">
+                <div class="container-info" id="minha empresa">
                     <span>Empresa</span>
                     <input type="text" class="label-name" value="Mouts TI">
                 </div>
             </div>
             <div class="button-user">
-                <button type="button" id="button-save"onclick="salvarInformacoes()">Salvar</button>
+                <button type="button" id="button-save" onclick="salvarInformacoes()">Salvar</button>
                 <button type="button" id="button" onclick="cancelarAcao()">Cancelar</button>
-                <button type="button" id="button"onclick="excluirsuario()">Excluir</button>
             </div>
-        </div>
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-        <script src="../utils/index.js"></script>
+            <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+            <script src="../utils/index.js"></script>
+            <script src="usuario.js"></script>
 </body>
 
 </html>
