--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -57,18 +57,19 @@
         </div>
         <div class="user-data">
             <div class="info-grid1">
-                <div class="container-info" id="email">
-                    <span>E-mail</span>
-                    <input type="text" class="label-name" value="paola.lopes@mouts.info">
-                </div>
-                <div class="container-info" id="contato">
-                    <span>Contato</span>
-                    <input type="text" class="label-name" value="(47) 99286-1109">
-                </div>
-                <div class="container-info" id="endereço">
-                    <span>Endereço</span>
-                    <input type="text" class="label-name" value="Indaial">
-                </div>
+                <form action="">
+                    <div class="container-info" id="email">
+                        <span>E-mail</span>
+                        <input type="text" class="label-name" value="paola.lopes@mouts.info">
+                    </div>
+                    <div class="container-info" id="contato">
+                        <span>Contato</span>
+                        <input type="text" class="label-name" value="(47) 99286-1109">
+                    </div>
+                    <div class="container-info" id="endereço">
+                        <span>Endereço</span>
+                        <input type="text" class="label-name" value="Indaial">
+                    </div>
             </div>
             <div class="info-grid2">
                 <div class="container-info" id="cargo">
@@ -87,6 +88,7 @@
             <div class="button-user">
                 <button type="button" id="button-save" onclick="salvarInformacoes()">Salvar</button>
             </div>
+            </form>
             <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
             <script src="../utils/index.js"></script>
             <script src="usuario.js"></script>
