Jquery finalizado e funcionando

--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -58,35 +58,35 @@
         <div class="user-data">
             <div class="info-grid1">
                 <form action="">
-                    <div class="container-info" id="email">
+                    <div class="container-info">
                         <span>E-mail</span>
-                        <input type="text" class="label-name" value="paola.lopes@mouts.info">
+                        <input type="text" id="email" class="label-name" value="paola.lopes@mouts.info">
                     </div>
-                    <div class="container-info" id="contato">
+                    <div class="container-info">
                         <span>Contato</span>
-                        <input type="text" class="label-name" value="(47) 99286-1109">
+                        <input type="text" id="contato" class="label-name" value="(47) 99286-1109">
                     </div>
-                    <div class="container-info" id="endereço">
+                    <div class="container-info">
                         <span>Endereço</span>
-                        <input type="text" class="label-name" value="Indaial">
+                        <input type="text" id="endereco" class="label-name" value="Indaial">
                     </div>
             </div>
             <div class="info-grid2">
-                <div class="container-info" id="cargo">
+                <div class="container-info">
                     <span>Cargo</span>
-                    <input type="text" class="label-name" value="SDR">
+                    <input type="text" id="cargo" class="label-name" value="SDR">
                 </div>
-                <div class="container-info" id="modelo de contratação">
+                <div class="container-info">
                     <span>Modelo de contratação</span>
-                    <input type="text" class="label-name" value="PJ">
+                    <input type="text" id="modeloContratacao" class="label-name" value="PJ">
                 </div>
-                <div class="container-info" id="minha empresa">
+                <div class="container-info">
                     <span>Empresa</span>
-                    <input type="text" class="label-name" value="Mouts TI">
+                    <input type="text" id="minhaEmpresa" class="label-name" value="Mouts TI">
                 </div>
             </div>
             <div class="button-user">
-                <button type="button" id="button-save" onclick="salvarInformacoes()">Salvar</button>
+                <button type="button" id="button-save">Salvar</button>
             </div>
             </form>
             <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
