Adição da opção "Início" no menu lateral

--- a/src/metas/metas.html
+++ b/src/metas/metas.html
@@ -41,6 +41,7 @@
         </div>
         <div id="menu-lateral">
             <ul class="menu-lateral-options">
+                <li><a href="../homepage/homepage.html">Início</a></li>
                 <li><a href="../estatisticas/estatisticas.html">Estatísticas</a></li>
                 <li><a href="../colaboradores/colaboradores.html">Colaboradores</a></li>
                 <li><a href="../metas/metas.html">Metas</a></li>
