Ajuste no botão de fechar menu lateral

--- a/src/estatisticas/estatisticas.html
+++ b/src/estatisticas/estatisticas.html
@@ -50,8 +50,7 @@
         <li><a href="../metas/metas.html">Metas</a></li>
       </ul>
       <div id="close-menu-lateral" class="grid flex place-content-end">
-        <p id="btn-close-menu-lateral">
-          << </p>
+        <p id="btn-close-menu-lateral"><<</p>
       </div>
     </div>
   </header>
