--- a/src/metas/metas.html
+++ b/src/metas/metas.html
@@ -74,7 +74,7 @@
 
     <!-- Gráfico Mensal -->
 
-    <div class=" bg-[#6FAFC3] py-3 px-10 ">
+    <div class="grafico-mensal bg-[#6FAFC3] py-3 px-10">
         <div class="text-2xl font-bold text-black"> Preenchimentos por Mês</div>
     </div>
     <div class="bg-[#c2eff1] pb-[5%] pt-[5%] flex flex-row justify-center items-center">
