--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -51,56 +51,55 @@
     </div>
   </header>
 
-  <div class="fundo-banner">
+  <div class="background-banner">
     <div class="banner">
       <img src="../../assets/images/aspas.png">
       <h2>Só a experiência própria é capaz de tornar sábio o ser humano.</h2>
-      <h4 class="my-8">Sigmund Freud</h4>
+      <h6>Sigmund Freud</h6>
     </div>
   </div>
   <div class="container mx-auto">
-    <h1 class="text-4xl text-center text-blue-800 underline underline-offset-8 p-10 font-mono font-bold">
-      Recursos</h1>
-    <div class="grid grid-cols-1 mx-10 sm:grid-cols-2 mx-5 md:grid-cols-3 mx-5 lg:grid-cols-4 gap-4">
-      <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../../assets/images/2.png" alt="" class="imagem-card image12 h-60">
-        <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
+    
+    <div class="grid grid-cols-1 mx-10 sm:grid-cols-2 mx-5 md:grid-cols-3 mx-5 lg:grid-cols-4 gap-10">
+      <div class="card flex flex-col items-center shadow-lg ">
+        <div class="image-card1 h-60"></div>
+        <h1 class="card-tittle text-blue-500 text-2xl text-center">
           Conscientização
         </h1>
         <div class="text-card text-center">Treinamentos regulares para gestores e colaboradores sobre sinais
           de
           estresse, ansiedade e depressão, bem como estratégias para lidar com essas questões.</div>
-        <input type="button" value="Treinamentos" class="button-card bg-blue-800 rounded-md text-md cursor-pointer">
+        <input type="button" value="Treinamentos" class="button-card bg-blue-500  text-md cursor-pointer">
       </div>
-      <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../../assets/images/3.png" alt="" class="imagem-card image12 h-60">
-        <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center">
+      <div class="card flex flex-col items-center  shadow-lg ">
+        <div class="image-card2 h-60"></div>
+        <h1 class="card-tittle text-blue-500 text-2xl text-center">
           Acesso a recursos
         </h1>
         <div class="text-card text-center">Possuímos recursos internos e externos para suporte à saúde mental,
           como linhas diretas de ajuda, profissionais de saúde mental e aplicativos.
           Além de uma lista de leituras, vídeos e recursos online que promovem a saúde mental.</div>
-        <input type="button" value="Experimente aqui" class="button-card bg-blue-800 rounded-md text-md cursor-pointer">
+        <input type="button" value="Experimente aqui" class="button-card bg-blue-500 text-md cursor-pointer">
       </div>
-      <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../../assets/images/4.png" alt="" class="imagem-card image12 h-60">
-        <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
+      <div class="card flex flex-col items-center shadow-lg ">
+        <div class="image-card3 h-60"></div>
+        <h1 class="card-tittle text-blue-500 text-2xl text-center ">
           Avaliações Regulares
         </h1>
         <div class="text-card text-center">Implementamos avaliações regulares da saúde mental para entender as
           necessidades específicas de nossos colaboradores. Utilizamos pesquisas anônimas para avaliar o nível de
           estresse, satisfação e bem-estar no trabalho.</div>
-        <input type="button" value="Avalie também!" class="button-card grid content-end bg-blue-800 cursor-pointer">
+        <input type="button" value="Avalie também!" class="button-card grid content-end bg-blue-500 cursor-pointer">
       </div>
-      <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../../assets/images/1.png" alt="" class="image12 h-60">
-        <h1 class="text-blue-800 text-2xl font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
+      <div class="card flex flex-col items-center  shadow-lg ">
+        <div class="image-card4 h-60"></div>
+        <h1 class="card-tittle text-blue-500 text-2xl text-center ">
           Cultura de Apoio
         </h1>
         <div class="text-card text-center">Valorizamos o equilíbrio entre trabalho e vida pessoal. Encorajamos uma
           atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
           preocupações.</div>
-        <input type="button" value="Opine" class="button-card bg-blue-800 rounded-md text-md cursor-pointer">
+        <input type="button" value="Opine" class="button-card bg-blue-500  text-md cursor-pointer">
       </div>
     </div>
   </div>
