--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -50,8 +50,8 @@
       </div>
     </div>
   </header>
-
   <div class="background-banner">
+    <video src="../../assets/videos/sea.mp4" type="video/mp4" autoplay loop muted></video>
     <div class="banner">
       <img src="../../assets/images/aspas.png">
       <h2>Só a experiência própria é capaz de tornar sábio o ser humano.</h2>
@@ -59,47 +59,42 @@
     </div>
   </div>
   <div class="container mx-auto">
-    
-    <div class="grid grid-cols-1 mx-10 sm:grid-cols-2 mx-5 md:grid-cols-3 mx-5 lg:grid-cols-4 gap-10">
+    <div class="grid grid-cols-1 mx-10 sm:grid-cols-2 mx-5 md:grid-cols-3 mx-5 lg:grid-cols-4 gap-20">
       <div class="card flex flex-col items-center shadow-lg ">
-        <div class="image-card1 h-60"></div>
-        <h1 class="card-tittle text-blue-500 text-2xl text-center">
+        <div class="image-card1 h-40"></div>
+        <h1 class="card-tittle text-blue-500 text-center">
           Conscientização
         </h1>
-        <div class="text-card text-center">Treinamentos regulares para gestores e colaboradores sobre sinais
-          de
-          estresse, ansiedade e depressão, bem como estratégias para lidar com essas questões.</div>
-        <input type="button" value="Treinamentos" class="button-card bg-blue-500  text-md cursor-pointer">
-      </div>
-      <div class="card flex flex-col items-center  shadow-lg ">
-        <div class="image-card2 h-60"></div>
-        <h1 class="card-tittle text-blue-500 text-2xl text-center">
-          Acesso a recursos
-        </h1>
-        <div class="text-card text-center">Possuímos recursos internos e externos para suporte à saúde mental,
-          como linhas diretas de ajuda, profissionais de saúde mental e aplicativos.
-          Além de uma lista de leituras, vídeos e recursos online que promovem a saúde mental.</div>
-        <input type="button" value="Experimente aqui" class="button-card bg-blue-500 text-md cursor-pointer">
+        <div class="text-card text-center">Treinamentos que abordam identificação de sinais
+          de estresse, ansiedade e depressão, além de fornecer estratégias de enfrentamento.</div>
+        <input type="button" value="Conscientização" class="button-card bg-blue-500  text-md cursor-pointer">
       </div>
       <div class="card flex flex-col items-center shadow-lg ">
-        <div class="image-card3 h-60"></div>
-        <h1 class="card-tittle text-blue-500 text-2xl text-center ">
+        <div class="image-card2 h-40"></div>
+        <h1 class="card-tittle text-blue-500 text-center">
+          Acesso a recursos
+        </h1>
+        <div class="text-card text-center">Contamos com profissionais, aplicativos e materiais online, para oferecer suporte abrangente à saúde mental, incluindo
+          listas de leituras e vídeos.</div>
+        <input type="button" value="Acesso a recursos" class="button-card bg-blue-500 text-md cursor-pointer">
+      </div>
+      <div class="card flex flex-col items-center shadow-lg ">
+        <div class="image-card3 h-40"></div>
+        <h1 class="card-tittle text-blue-500 text-center ">
           Avaliações Regulares
         </h1>
-        <div class="text-card text-center">Implementamos avaliações regulares da saúde mental para entender as
-          necessidades específicas de nossos colaboradores. Utilizamos pesquisas anônimas para avaliar o nível de
-          estresse, satisfação e bem-estar no trabalho.</div>
-        <input type="button" value="Avalie também!" class="button-card grid content-end bg-blue-500 cursor-pointer">
+        <div class="text-card text-center">Pesquisas para compreender as necessidades individuais dos colaboradores, abordando níveis de estresse,
+          satisfação e bem-estar no trabalho.</div>
+        <input type="button" value="Avaliações Regulares" class="button-card bg-blue-500 text-md cursor-pointer">
       </div>
       <div class="card flex flex-col items-center  shadow-lg ">
-        <div class="image-card4 h-60"></div>
-        <h1 class="card-tittle text-blue-500 text-2xl text-center ">
+        <div class="image-card4 h-40"></div>
+        <h1 class="card-tittle text-blue-500 text-center ">
           Cultura de Apoio
         </h1>
-        <div class="text-card text-center">Valorizamos o equilíbrio entre trabalho e vida pessoal. Encorajamos uma
-          atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
+        <div class="text-card text-center">Encorajamos uma atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
           preocupações.</div>
-        <input type="button" value="Opine" class="button-card bg-blue-500  text-md cursor-pointer">
+        <input type="button" value="Cultura de Apoio" class="button-card bg-blue-500 grid content-end text-md cursor-pointer">
       </div>
     </div>
   </div>
