--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -65,7 +65,7 @@
         <h1 class="card-tittle text-blue-500 text-center">
           Conscientização
         </h1>
-        <div class="text-card text-center">Treinamentos que abordam identificação de sinais
+        <div class="text-card text-indent-8">Treinamentos que abordam identificação de sinais
           de estresse, ansiedade e depressão, além de fornecer estratégias de enfrentamento.</div>
         <input type="button" value="Conscientização" class="button-card bg-blue-500  text-md cursor-pointer">
       </div>
@@ -74,7 +74,7 @@
         <h1 class="card-tittle text-blue-500 text-center">
           Acesso a recursos
         </h1>
-        <div class="text-card text-center">Contamos com profissionais, aplicativos e materiais online, para oferecer suporte abrangente à saúde mental, incluindo
+        <div class="text-card text-indent-8">Contamos com profissionais, aplicativos e materiais online, para oferecer suporte abrangente à saúde mental, incluindo
           listas de leituras e vídeos.</div>
         <input type="button" value="Acesso a recursos" class="button-card bg-blue-500 text-md cursor-pointer">
       </div>
@@ -83,16 +83,16 @@
         <h1 class="card-tittle text-blue-500 text-center ">
           Avaliações Regulares
         </h1>
-        <div class="text-card text-center">Pesquisas para compreender as necessidades individuais dos colaboradores, abordando níveis de estresse,
+        <div class="text-card text-indent-8">Pesquisas para compreender as necessidades individuais dos colaboradores, abordando níveis de estresse,
           satisfação e bem-estar no trabalho.</div>
         <input type="button" value="Avaliações Regulares" class="button-card bg-blue-500 text-md cursor-pointer">
       </div>
-      <div class="card flex flex-col items-center  shadow-lg ">
+      <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card4 h-40"></div>
         <h1 class="card-tittle text-blue-500 text-center ">
           Cultura de Apoio
         </h1>
-        <div class="text-card text-center">Encorajamos uma atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
+        <div class="text-card text-indent-8">Encorajamos uma atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
           preocupações.</div>
         <input type="button" value="Cultura de Apoio" class="button-card bg-blue-500 grid content-end text-md cursor-pointer">
       </div>
