--- a/src/meus-colaboradores/meus-colaboradores.html
+++ b/src/meus-colaboradores/meus-colaboradores.html
@@ -21,6 +21,40 @@
       }
     }
   </script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    form {
+      max-width: 300px;
+      margin: 20px auto;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    input {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 
 
@@ -61,11 +95,7 @@
     <div class="text-2xl font-semibold text-black">Editar informações sobre os <b>Colaboradores</b></div>
   </div>
 
-
-
-<h1>testee</h1>
-
-
+  
   <!-- Adicionar Colaborador -->
 
   <button class="my-emp-btn shadow-xl bg-blue-500 hover:bg-blue-700 text-white font-bold rounded edit-button"
@@ -87,10 +117,70 @@
   </button>
 
   <div class="modal-overlay" id="overlayEditCol" onclick="closeModal('editCol','overlayEditCol')"></div>
-  <div class="modal" id="editCol">
+  <div class="modal w-[50%]" id="editCol">
 
-    <h2>Editar Colaborador do Mind+</h2>
-    <p>[FORM Edição de Colaboradores]</p>
+   <!-- Formulário ALTERAR --> 
+    <div class="container py-8 rounded shadow-md">
+      <form id="editForm" class="max-w-md p-[5%]">
+        
+        <div class="mb-2">
+          <h1>Digite o E-mail para selecionar o colaborador a ser alterado</h1>
+          <label for="email" class="block text-gray-700 font-semibold mb-2">E-mail do Colaborador</label>
+          <input type="email" id="email" name="email"
+            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
+            placeholder="colaborador@mail.com">
+        </div>
+  
+        <div class="mb-2">
+          <label for="name" class="block text-gray-700 font-semibold mb-2">Novo Nome</label>
+          <input type="text" id="name" name="name"
+            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500" placeholder="Jane Doe">
+        </div>
+  
+        <div class="mb-2">
+          <label for="position" class="block text-gray-700 font-semibold mb-2">Novo Cargo</label>
+          <input type="text" id="position" name="position"
+            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
+            placeholder="Desenvolvedor(a) Jr.">
+        </div>
+  
+        <div class="mb-2">
+          <label for="phone" class="block text-gray-700 font-semibold mb-2">Novo Contato</label>
+          <input type="text" id="department" name="department"
+            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
+            placeholder="(xx) xxxxx-xxxx">
+        </div>
+  
+        <div class="mb-2">
+          <label for="phone" class="block text-gray-700 font-semibold mb-2">Nova Empresa</label>
+          <input type="text" id="department" name="department"
+            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500" placeholder="Mind Plus">
+        </div>
+  
+        <div class="mb-2">
+          <label for="phone" class="block text-gray-700 font-semibold mb-2">Novo Endereço</label>
+          <input type="text" id="department" name="department"
+            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
+            placeholder="Rua X, Bairro Y, Cidade Z">
+        </div>
+  
+        <div class="mb-4">
+          <label for="contract" class="block text-gray-700 font-semibold mb-2">Novo Modelo de Contrato </label>
+          <select type="text" name="" id="" class="w-full px-3 py-2 border rounded-lg">
+            <option selected>Selecione uma opção</option>
+            <option value="clt">CLT</option>
+            <option value="pj">PJ</option>
+            <option value="estagio">Estagiário</option>
+          </select>
+        </div>
+  
+        <button type="button" onclick="editEmployee()"
+          class="w-full bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600">Salvar
+          Alterações</button>
+      </form>
+    </div>
+
+
   </div>
 
 
@@ -123,5 +213,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="../utils/index.js"></script>
+  <script src="meus-colaboradores.js"></script>
 </body>
+
 </html>
