--- a/src/meus-colaboradores/meus-colaboradores.html
+++ b/src/meus-colaboradores/meus-colaboradores.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html>
+<link rel="stylesheet" href="meus-colaboradores.css">
+<link rel="stylesheet" href="meus-colaboradores.js">
 
 <head>
   <meta charset="UTF-8">
@@ -70,8 +72,112 @@
   <div class="modal-overlay" id="overlayAddCol" onclick="closeModal('addCol','overlayAddCol')"></div>
   <div class="modal" id="addCol">
 
-    <h2>Adicionar Colaborador do Mind+</h2>
-    <p>[FORM Adição de Colaboradores]</p>
+    <div class="p-4 m-5 text-center font-bold text-2xl">
+      <h1>Cadastro Colaborador</h1>
+    </div>
+
+    <form class="max-w-300px mx-auto my-10">
+      <label for="name" class="l-form">Nome:</label>
+      <input type="text" id="name" name="name" required class="i-form" placeholder="Nome colaborador">
+      <span class="error" id="nameError"></span>
+
+      <label for="email" class="l-form">E-mail:</label>
+      <input type="email" id="email" name="email" required class="i-form" placeholder="colaborador@mail.com">
+      <span class="error" id="emailError"></span>
+
+      <label for="contato" class="l-form">Contato:</label>
+      <input type="text" id="contact" name="contact" required class="i-form" placeholder="(00) 0000-0000">
+      <span class="error" id="contactError"></span>
+
+      <label for="endereco" class="l-form">Endereço:</label>
+      <input type="text" id="address" name="address" required class="i-form" placeholder="Rua, Bairro, Cidade">
+      <span class="error" id="addressError"></span>
+
+      <label for="cargo" class="l-form">Cargo:</label>
+      <input type="text" id="office" name="office" required class="i-form">
+      <span class="error" id="officeError"></span>
+
+      <label for="empresa" class="l-form">Empresa:</label>
+      <input type="text" id="company" name="company" required class="i-form">
+      <span class="error" id="companyError"></span>
+
+      <label for="contratacao" id="mdc">Modelo de contratação:</label>
+      <select name="" id="" class="i-select">
+        <option selected>Selecione uma opção</option>
+        <option value="clt">CLT</option>
+        <option value="pj">PJ</option>
+        <option value="estagio">Estagiário</option>
+      </select>
+
+      <label for="password" class="l-form" id="pass">Senha:</label>
+      <input type="password" id="password" name="password" required class="i-form">
+      <span class="error" id="passwordError"></span>
+
+      <button type="button" class="bg-blue-700 text-white px-40 mt-5 p-2 ml-60 mr-60 border-none rounded-md cursor-pointer hover:opacity-75" onclick="validateForm()">Cadastrar</button>
+    </form>
+
+    <script>
+      function validateForm() {
+
+        var nameInput = document.getElementById('name');
+        var emailInput = document.getElementById('email');
+        var contactInput = document.getElementById('contact');
+        var addressInput = document.getElementById('address');
+        var officeInput = document.getElementById('office');
+        var companyInput = document.getElementById('company');
+        var passwordInput = document.getElementById('password');
+
+        var nameError = document.getElementById('nameError');
+        var emailError = document.getElementById('emailError');
+        var contactError = document.getElementById('contactError');
+        var addressError = document.getElementById('addressError');
+
+        var passwordError = document.getElementById('passwordError');
+
+        if (!nameInput.checkValidity()) {
+          nameError.textContent = 'Por favor, preencha este campo.';
+        } else {
+          nameError.textContent = '';
+        }
+
+        if (!emailInput.checkValidity()) {
+          emailError.textContent = 'Por favor, insira um endereço de e-mail válido.';
+        } else {
+          emailError.textContent = '';
+        }
+
+        if (!contactInput.checkValidity()) {
+          contactError.textContent = 'Por favor, insira um contato.'
+        } else {
+          contactError.textContent = '';
+        }
+
+        if (!addressInput.checkValidity()) {
+          addressError.textContent = 'Por favor, insira um endereço.'
+        } else {
+          addressError.textContent = '';
+        }
+
+        if (!officeInput.checkValidity()) {
+          officeError.textContent = 'Por favor, insira um cargo.'
+        } else {
+          officeError.textContent = '';
+        }
+
+        if (!companyInput.checkValidity()) {
+          companyError.textContent = 'Por favor, insira uma empresa.'
+        } else {
+          companyError.textContent = '';
+        }
+
+        if (!passwordInput.checkValidity()) {
+          passwordError.textContent = 'Por favor, insira uma senha.'
+        } else {
+          passwordError.textContent = '';
+        }
+      }
+    </script>
+
   </div>
 
 
@@ -119,4 +225,5 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="../utils/index.js"></script>
 </body>
+
 </html>
