--- a/src/meus-colaboradores/meus-colaboradores.html
+++ b/src/meus-colaboradores/meus-colaboradores.html
@@ -95,7 +95,7 @@
     <div class="text-2xl font-semibold text-black">Editar informações sobre os <b>Colaboradores</b></div>
   </div>
 
-  
+
   <!-- Adicionar Colaborador -->
 
   <button class="my-emp-btn shadow-xl bg-blue-500 hover:bg-blue-700 text-white font-bold rounded edit-button"
@@ -145,28 +145,28 @@
         </div>
   
         <div class="mb-2">
-          <label for="phone" class="block text-gray-700 font-semibold mb-2">Novo Contato</label>
-          <input type="text" id="department" name="department"
+          <label for="contact" class="block text-gray-700 font-semibold mb-2">Novo Contato</label>
+          <input type="text" id="contact" name="contact"
             class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
             placeholder="(xx) xxxxx-xxxx">
         </div>
   
         <div class="mb-2">
-          <label for="phone" class="block text-gray-700 font-semibold mb-2">Nova Empresa</label>
-          <input type="text" id="department" name="department"
+          <label for="business" class="block text-gray-700 font-semibold mb-2">Nova Empresa</label>
+          <input type="text" id="business" name="business"
             class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500" placeholder="Mind Plus">
         </div>
   
         <div class="mb-2">
-          <label for="phone" class="block text-gray-700 font-semibold mb-2">Novo Endereço</label>
-          <input type="text" id="department" name="department"
+          <label for="adress" class="block text-gray-700 font-semibold mb-2">Novo Endereço</label>
+          <input type="text" id="adress" name="adress"
             class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
             placeholder="Rua X, Bairro Y, Cidade Z">
         </div>
   
         <div class="mb-4">
           <label for="contract" class="block text-gray-700 font-semibold mb-2">Novo Modelo de Contrato </label>
-          <select type="text" name="" id="" class="w-full px-3 py-2 border rounded-lg">
+          <select type="text" name="" id="contract" class="w-full px-3 py-2 border rounded-lg">
             <option selected>Selecione uma opção</option>
             <option value="clt">CLT</option>
             <option value="pj">PJ</option>
