--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -67,7 +67,7 @@
         </h1>
         <div class="text-card text-indent-8">Treinamentos que abordam identificação de sinais
           de estresse, ansiedade e depressão, além de fornecer estratégias de enfrentamento.</div>
-        <input type="button" value="Treinamentos" class="button-card bg-blue-500  text-md cursor-pointer">
+        <input type="button" id="treinamentos" value="Treinamentos" class="button-card bg-blue-500  text-md cursor-pointer">
       </div>
       <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card2 h-40"></div>
@@ -76,7 +76,7 @@
         </h1>
         <div class="text-card text-indent-8">Contamos com profissionais, aplicativos e materiais online, para oferecer suporte abrangente à saúde mental, incluindo
           listas de leituras e vídeos.</div>
-        <input type="button" value="Acesse" class="button-card bg-blue-500 text-md cursor-pointer">
+        <input type="button" id="acesso" value="Acesse" class="button-card bg-blue-500 text-md cursor-pointer">
       </div>
       <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card3 h-40"></div>
@@ -85,7 +85,7 @@
         </h1>
         <div class="text-card text-indent-8">Pesquisas para compreender as necessidades individuais dos colaboradores, abordando níveis de estresse,
           satisfação e bem-estar no trabalho.</div>
-        <input type="button" value="Avalie" class="button-card bg-blue-500 text-md cursor-pointer">
+        <input type="button" id="avaliacoes" value="Avalie" class="button-card bg-blue-500 text-md cursor-pointer">
       </div>
       <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card4 h-40"></div>
@@ -94,12 +94,13 @@
         </h1>
         <div class="text-card text-indent-8">Encorajamos uma atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
           preocupações.</div>
-        <input type="button" value="Opine" class="button-card bg-blue-500 grid content-end text-md cursor-pointer">
+        <input type="button" id="cultura" value="Opine" class="button-card bg-blue-500 grid content-end text-md cursor-pointer">
       </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="../utils/index.js"></script>
+  <script src="./homepage.js"></script>
 </body>
 
 </html>
