adicionei funcionalidade aos botoes home (js + jquery)

--- a/src/homepage/acesse.html
+++ b/src/homepage/acesse.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>
+           acesse
+        </h1>
+    </div>
 </body>
 </html>
