--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -85,7 +85,7 @@
         </h1>
         <div class="text-card text-indent-8">Pesquisas para compreender as necessidades individuais dos colaboradores, abordando níveis de estresse,
           satisfação e bem-estar no trabalho.</div>
-        <input type="button" id="avaliacoes" value="Avalie" class="button-card bg-blue-500 text-md cursor-pointer">
+        <input type="button" id="avalie" value="Avalie" class="button-card bg-blue-500 text-md cursor-pointer">
       </div>
       <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card4 h-40"></div>
@@ -94,7 +94,7 @@
         </h1>
         <div class="text-card text-indent-8">Encorajamos uma atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
           preocupações.</div>
-        <input type="button" id="cultura" value="Opine" class="button-card bg-blue-500 grid content-end text-md cursor-pointer">
+        <input type="button" id="opine" value="Opine" class="button-card bg-blue-500 grid content-end text-md cursor-pointer">
       </div>
     </div>
   </div>
