--- a/src/homepage/treinamentos.html
+++ b/src/homepage/treinamentos.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>
+            treinamentos
+        </h1>
+    </div>
 </body>
 </html>
