Ajustes de margin-top em algumas páginas de acordo com a header

--- a/src/estatisticas/estatisticas.html
+++ b/src/estatisticas/estatisticas.html
@@ -58,7 +58,7 @@
 
   <!-- Introdução -->
 
-  <div class="intro mt-5 py-3 px-10">
+  <div class="intro py-3 px-10">
     <div class="text-2xl font-bold text-black">Estatísticas</div>
     <div class="text- font-semibold text-black">Selecione a visualização de dados desejada</b></div>
   </div>
