--- a/src/metas/metas.html
+++ b/src/metas/metas.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,14 +48,15 @@
                 <li><a href="../metas/metas.html">Metas</a></li>
             </ul>
             <div id="close-menu-lateral" class="grid flex place-content-end">
-                <p id="btn-close-menu-lateral"><<</p>
+                <p id="btn-close-menu-lateral">
+                    <<< /p>
             </div>
         </div>
     </header>
 
     <!-- Meta Atual (a ideia é mais pra frente alterar a cor conforme o preenchimento avança) -->
 
-    <div class=" bg-[#6FAFC3] mt-8 py-3 px-10">
+    <div class=" bg-[#6FAFC3] py-3 px-10">
         <div class="text-2xl font-bold text-black"> Metas de Adesão</div>
     </div>
 
