Correções finais no menu lateral da header

--- a/src/estatisticas/estatisticas.html
+++ b/src/estatisticas/estatisticas.html
@@ -51,7 +51,8 @@
         <li><a href="../metas/metas.html">Metas</a></li>
       </ul>
       <div id="close-menu-lateral" class="grid flex place-content-end">
-        <img src="../../assets/images/botao-excluir.png" alt="fechar" id="btn-close-menu-lateral">
+        <p id="btn-close-menu-lateral">
+          << </p>
       </div>
     </div>
   </header>
