--- a/src/meus-colaboradores/meus-colaboradores.html
+++ b/src/meus-colaboradores/meus-colaboradores.html
@@ -29,7 +29,7 @@
 <body>
   <header class="my-header">
     <div class="logo">
-      <a href="../homepage/homepage.css">
+      <a href="../homepage/homepage.html">
         <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
       </a>
     </div>
@@ -50,7 +50,8 @@
         <li><a href="../metas/metas.html">Metas</a></li>
       </ul>
       <div id="close-menu-lateral" class="grid flex place-content-end">
-        <p id="btn-close-menu-lateral"><<</p>
+        <p id="btn-close-menu-lateral">
+          << </p>
       </div>
     </div>
   </header>
@@ -119,4 +120,5 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="../utils/index.js"></script>
 </body>
+
 </html>
