--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -73,7 +73,7 @@
       <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card2 h-40"></div>
         <h1 class="card-tittle text-blue-500 text-center">
-          Acesso a recursos
+          Recursos
         </h1>
         <div class="text-card text-indent-8">Contamos com profissionais, aplicativos e materiais online, para oferecer
           suporte abrangente à saúde mental, incluindo
@@ -83,7 +83,7 @@
       <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card3 h-40"></div>
         <h1 class="card-tittle text-blue-500 text-center ">
-          Avaliações Regulares
+          Avaliações
         </h1>
         <div class="text-card text-indent-8">Pesquisas para compreender as necessidades individuais dos colaboradores,
           abordando níveis de estresse,
