--- a/src/usuario/usuario.html
+++ b/src/usuario/usuario.html
@@ -36,7 +36,7 @@
             <li><a href="../metas/metas.html">Metas</a></li>
         </ul>
         <div class="user-icon">
-            <a href="../usuario/usuario.html"><img src="../../assets/images/user-icon.png" alt="Usuario"></a>
+            <a href="usuario.html"><img src="../../assets/images/user-icon.png" alt="Usuario"></a>
         </div>
         <div id="menu-lateral">
             <ul class="menu-lateral-options">
