Adicionei conteudo e funcinalidade para o botao 'ver mais' da home

--- a/src/homepage/homepage.html
+++ b/src/homepage/homepage.html
@@ -65,9 +65,9 @@
         <h1 class="card-tittle text-blue-500 text-center">
           Conscientização
         </h1>
-        <div class="text-card text-indent-8">Treinamentos que abordam identificação de sinais
+        <div class="text-card text-indent-8">Acesse conteudos de que abordam identificação de sinais
           de estresse, ansiedade e depressão, além de fornecer estratégias de enfrentamento.</div>
-        <input type="button" id="treinamentos" value="Treinamentos" class="button-card bg-blue-500  text-md cursor-pointer">
+        <input type="button" id="treinamentos" value="Ver Mais" class="button-card bg-blue-500  text-md cursor-pointer">
       </div>
       <div class="card flex flex-col items-center shadow-lg ">
         <div class="image-card2 h-40"></div>
