--- a/src/homepage/acesse.html
+++ b/src/homepage/acesse.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./acesse.css">
+    <link rel="stylesheet" href="../utils/reset.css">
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>
-           acesse
-        </h1>
+    <div class="container">
     </div>
 </body>
 </html>
