ajustes nas pastas

--- a/src/homepage/avalie.html
+++ b/src/homepage/avalie.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <title>Saude e Bem-estar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./treinamentos.css">
+    <link rel="stylesheet" href="../utils/reset.css">
 </head>
+
 <body>
     <div class="container">
-        
+        <video src="../../assets/videos/sea.mp4" type="video/mp4" autoplay loop muted></video>
+        <div class="center-column">
+            <div class="menu">
+                <iframe width="900" height="415" src="https://www.youtube.com/embed/RylLBe8yAwc" frameborder="0"
+                    allowfullscreen></iframe>
+                <div class="card ">
+                    <div class="card1" id="card1">
+                        <div><img src="../../assets/images/mulher-linda.png" alt=""></div>
+                        <h1>
+                            8 dicas: como manter a saude mental em dia
+                        </h1>
+                        <h2>
+                            Nada melhor que começar o assunto definindo o que é saúde mental. Esse termo envolve tudo o
+                            que se refere ao bem-estar psicológico, social e emocional de uma pessoa.
+                        </h2>
+                    </div>
+                    <div class="card2" id="card2">
+                        <div><img src="../../assets/images/mulher-estressadaa.png" alt=""></div>
+                        <h1>
+                            Como lidar com a raiva: 10 dicas práticas
+                        </h1>
+                        <h2>
+                            Aprenda como lidar com a raiva de maneira mais saudável para não sofrer os prejuízos dos
+                            efeitos negativos dessa emoção.
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./treinamento.js"></script>
 </body>
+
 </html>
