resposividade dos botoes arrumada

--- a/src/homepage/treinamentos.html
+++ b/src/homepage/treinamentos.html
@@ -18,7 +18,7 @@
                     allowfullscreen></iframe>
                 <div class="card ">
                     <div class="card1" id="card1">
-                        <div><img src="../../assets/images/mulher-linda.png" alt=""></div>
+                        <img src="../../assets/images/mulher-linda.png" alt="">
                         <h1>
                             8 dicas: como manter a saude mental em dia
                         </h1>
@@ -28,7 +28,7 @@
                         </h2>
                     </div>
                     <div class="card2" id="card2">
-                        <div><img src="../../assets/images/mulher-estressadaa.png" alt=""></div>
+                        <img src="../../assets/images/mulher-estressadaa.png" alt="">
                         <h1>
                             Como lidar com a raiva: 10 dicas práticas
                         </h1>
