--- a/src/homepage/treinamentos.html
+++ b/src/homepage/treinamentos.html
@@ -14,6 +14,7 @@
         <video src="../../assets/videos/sea.mp4" type="video/mp4" autoplay loop muted></video>
         <div class="center-column">
             <div class="menu">
+                    <input type="button" id="voltar" value="Voltar" class="button-card">
                 <iframe width="900" height="415" src="https://www.youtube.com/embed/RylLBe8yAwc" frameborder="0"
                     allowfullscreen></iframe>
                 <div class="card ">
