--- a/src/homepage/opine.html
+++ b/src/homepage/opine.html
@@ -14,11 +14,12 @@
         <video src="../../assets/videos/sea.mp4" type="video/mp4" autoplay loop muted></video>
         <div class="center-column">
             <div class="menu">
+                    <input type="button" id="voltar" value="Voltar" class="button-card">
                 <iframe width="900" height="415" src="https://www.youtube.com/embed/RylLBe8yAwc" frameborder="0"
                     allowfullscreen></iframe>
                 <div class="card ">
                     <div class="card1" id="card1">
-                        <div><img src="../../assets/images/mulher-linda.png" alt=""></div>
+                        <img src="../../assets/images/mulher-linda.png" alt="">
                         <h1>
                             8 dicas: como manter a saude mental em dia
                         </h1>
@@ -28,7 +29,7 @@
                         </h2>
                     </div>
                     <div class="card2" id="card2">
-                        <div><img src="../../assets/images/mulher-estressadaa.png" alt=""></div>
+                        <img src="../../assets/images/mulher-estressadaa.png" alt="">
                         <h1>
                             Como lidar com a raiva: 10 dicas práticas
                         </h1>
